feat: deploy and refactoring user activation
